--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   manager:
     build: ./ManagerProject/
     environment:
-      - WORKERS_NUM=1
+      - WORKERS_NUM=2
     ports:
       - "8080:8080"
     networks:
@@ -13,6 +13,13 @@ services:
     build: ./WorkerProject/
     ports:
       - "8081:8080"
+    networks:
+      - network1
+
+  worker2:
+    build: ./WorkerProject/
+    ports:
+      - "8082:8080"
     networks:
       - network1
 
