--- a/ManagerProject/pom.xml
+++ b/ManagerProject/pom.xml
@@ -67,7 +67,15 @@
             <version>5.10.0</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
+            <version>4.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
