--- a/WorkerProject/pom.xml
+++ b/WorkerProject/pom.xml
@@ -54,6 +54,15 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.16.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
+            <version>4.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
