--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,25 +1,40 @@
 version: '3'
 services:
+  rabbitmq:
+    image: rabbitmq:3-management
+    environment:
+      RABBITMQ_DEFAULT_USER: user
+      RABBITMQ_DEFAULT_PASS: password
+    healthcheck:
+      test: rabbitmq-diagnostics -q ping
+      interval: 10s
+      timeout: 10s
+      retries: 3
+    ports:
+      - "5672:5672"
+      - "15672:15672"  # Для веб-интерфейса RabbitMQ
+    networks:
+      - network1
+
   manager:
+    environment:
+      - WORKERS_NUM=1
+      - RABBITMQ_HOST=rabbitmq
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
     build: ./ManagerProject/
     ports:
       - "8080:8080"
     networks:
       - network1
-    env_file:
-      - .env
 
   worker1:
-    build: ./WorkerProject/
-    networks:
-      - network1
-
-  worker2:
-    build: ./WorkerProject/
-    networks:
-      - network1
-
-  worker3:
+    environment:
+      - RABBITMQ_HOST=rabbitmq
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
     build: ./WorkerProject/
     networks:
       - network1
