--- a/ManagerProject/pom.xml
+++ b/ManagerProject/pom.xml
@@ -76,6 +76,13 @@
             <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
             <version>4.1.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-mongodb -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-mongodb</artifactId>
+            <version>4.2.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
