--- a/ManagerProject/src/main/resources/application.properties
+++ b/ManagerProject/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.password=password
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=user
+
+spring.data.mongodb.host=mongodb
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=ticketsbase
+spring.data.mongodb.username=user
+spring.data.mongodb.password=password
