fix: still trying to connect to mongo cluster

--- a/ManagerProject/src/main/resources/application.properties
+++ b/ManagerProject/src/main/resources/application.properties
@@ -3,8 +3,6 @@ spring.rabbitmq.password=password
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=user
 
-spring.data.mongodb.host=mongodb
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=ticketsbase
-spring.data.mongodb.username=user
-spring.data.mongodb.password=password
+spring.data.mongodb.uri=mongodb://mongodb1:27017,mongodb2:27018,mongodb3:27019/ticketsdb
+spring.data.mongodb.replica-set-name=rs0
+#spring.data.mongodb.uri=mongodb://mongodb1:27017,mongodb2:27018,mongodb3:27019/ticketsdb?replicaSet=rs0
