--- a/ManagerProject/pom.xml
+++ b/ManagerProject/pom.xml
@@ -72,6 +72,10 @@
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
             <version>4.1.0</version>
@@ -82,7 +86,11 @@
             <artifactId>spring-data-mongodb</artifactId>
             <version>4.2.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>5.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
